--- a/src/style.css
+++ b/src/style.css
@@ -85,7 +85,7 @@ button {
  -moz-box-shadow: inset 0 1px 0 0 #fff,inset 0 -1px 0 0 #d9d9d9,inset 0 0 0 1px #f2f2f2,0 2px 4px 0 #f2f2f2;
  -webkit-box-shadow: inset 0 1px 0 0 #fff,inset 0 -1px 0 0 #d9d9d9,inset 0 0 0 1px #f2f2f2,0 2px 4px 0 #f2f2f2;
  text-shadow: 0 1px 0 #fff;
- background-image: linear-gradient(to top, #f2f2f2, #f2f2f2);
+ /*background-image: linear-gradient(to top, #f2f2f2, #f2f2f2);*/
  background-color: #f2f2f2;
 }
 .button:hover, .button:active{
