--- a/src/style.css
+++ b/src/style.css
@@ -26,7 +26,7 @@ body {
 	right: 2px;
 	bottom: 2px;
 	left: 2px;
-	background: #413548;
+	background: #ffdb4d; /*413548*/
 	border-radius: 2px;
 }
 .checkbox-custom,
@@ -71,7 +71,7 @@ button {
 .button{
  display: inline-block;
  border:1px solid #bfbfbf;
- color: #8c8c8c;
+ color: #000000;
  margin: 10px 0 0 0;
  border-radius: 5px 5px 5px 5px;
  -webkit-border-radius: 5px 5px 5px 5px;
@@ -95,4 +95,24 @@ button {
  -moz-box-shadow: inset 0 1px 0 0 #ffffff,inset 0 -1px 0 0 #d9d9d9,inset 0 0 0 1px #f2f2f2;
  -webkit-box-shadow: inset 0 1px 0 0 #ffffff,inset 0 -1px 0 0 #d9d9d9,inset 0 0 0 1px #f2f2f2;
  background-color: #f2f2f2;
+}
+
+.navbar {
+    position: relative;
+    min-height: 50px;
+    margin-bottom: 20px;
+    border: 1px solid transparent;
+    background: #F6F5F3;
+}
+
+.navbar-logo {
+    content: "";
+    display: inline-block;
+    width: 100px;
+    height: 50px;
+    display: table-cell;
+  	vertical-align: middle;
+  	text-align: center;
+    background: #ffdb4d;
+    font-size: 24px;
 }
