--- a/src/style.css
+++ b/src/style.css
@@ -116,3 +116,12 @@ button {
     background: #ffdb4d;
     font-size: 24px;
 }
+
+.navbar-logo::after{
+	content: ''; 
+    position: absolute;
+	top:0; /* Абсолютное позиционирование */
+    left: 100px; /*bottom: -20px; /* Положение треугольника */
+    border: 25px solid transparent;	
+	border-left: 25px solid #ffdb4d;
+}
