--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,19 @@
+@font-face {
+  font-family: Yandex-Sans;
+  src: local("Yandex-Sans"),
+       local("Yandex-Sans"),
+       url(yndx-sans.ttf);
+  font-weight: bold;
+}
+
 body {
     font-size: 0.9em;
-    padding: 20px 55px;
+    /*padding: 20px 55px;*/
+	margin: 0;
+	font-family: "Yandex-Sans";
+}
+#grid{
+	padding: 1px 55px;
 }
 .form-row {
 	margin: 10px 0;
@@ -34,10 +47,6 @@ body {
 	display: inline-block;
 	vertical-align: middle;
 }
-.values{
-    clear: left;
-    min-height: 50px;
-}
 
 @media screen and (max-width: 480px){
 	#grid[data-columns]::before {
@@ -60,7 +69,7 @@ body {
 .column { float: left; }
 .size-1of1 { width: 100%; }
 .size-1of2 { width: 50%; }
-.size-1of3 { width: 33.333%; }
+.size-1of3 { width: calc(100%/3); }
 
 
 button {
@@ -69,7 +78,7 @@ button {
 }
 
 .button{
- display: inline-block;
+ display: block;
  border:1px solid #bfbfbf;
  color: #000000;
  margin: 10px 0 0 0;
@@ -87,20 +96,21 @@ button {
  text-shadow: 0 1px 0 #fff;
  /*background-image: linear-gradient(to top, #f2f2f2, #f2f2f2);*/
  background-color: #f2f2f2;
+ margin-left: 50px;
+ margin-bottom: 20px;
 }
 .button:hover, .button:active{
  border:1px solid #8c8c8c;
- color: #8c8c8c;
+ color: #000000;
  box-shadow: inset 0 1px 0 0 #ffffff,inset 0 -1px 0 0 #d9d9d9,inset 0 0 0 1px #f2f2f2;
  -moz-box-shadow: inset 0 1px 0 0 #ffffff,inset 0 -1px 0 0 #d9d9d9,inset 0 0 0 1px #f2f2f2;
  -webkit-box-shadow: inset 0 1px 0 0 #ffffff,inset 0 -1px 0 0 #d9d9d9,inset 0 0 0 1px #f2f2f2;
- background-color: #f2f2f2;
+ background-color: #ffed7d;
 }
 
 .navbar {
     position: relative;
-    min-height: 50px;
-    margin-bottom: 20px;
+    min-height: 30px;
     border: 1px solid transparent;
     background: #F6F5F3;
 }
@@ -108,20 +118,52 @@ button {
 .navbar-logo {
     content: "";
     display: inline-block;
-    width: 100px;
-    height: 50px;
+    width: 140px;
+    height: 44px;
+	padding: 0 5px 0 5px;
     display: table-cell;
   	vertical-align: middle;
   	text-align: center;
     background: #ffdb4d;
     font-size: 24px;
+	font-weight: bold;
 }
 
 .navbar-logo::after{
 	content: ''; 
     position: absolute;
 	top:0; /* Абсолютное позиционирование */
-    left: 100px; /*bottom: -20px; /* Положение треугольника */
-    border: 25px solid transparent;	
-	border-left: 25px solid #ffdb4d;
+    left: 150px; /*bottom: -20px; /* Положение треугольника */
+    border: 22px solid transparent;	
+	border-left: 15px solid #ffdb4d;
+}
+
+.footer{
+	margin: 10px;
+	margin-left: 0;
+	margin-right: 0;
+	position: unset;
+    background: #F6F5F3;
+	width: 100%;
+    height: auto;
+    display: inline-block;
+}
+
+.footer-text{
+	padding: 5px;
+	padding-left: 25px;
+	background: #E6E5E3;
+	vertical-align: middle;
+  	text-align: left;
+}
+
+.values{
+    clear: left;
+    min-height: 50px;
+	padding: 5px;
+	padding-left: 25px;
+}
+
+strong{
+	font-family: Arial, Courier, monospace;
 }
