--- a/src/style.css
+++ b/src/style.css
@@ -78,7 +78,7 @@ button {
 }
 
 .button{
- display: block;
+ /*display: block;*/
  border:1px solid #bfbfbf;
  color: #000000;
  margin: 10px 0 0 0;
@@ -108,6 +108,10 @@ button {
  background-color: #ffed7d;
 }
 
+#restart-page {
+  display: inline-block;
+}
+
 .navbar {
     position: relative;
     min-height: 30px;
@@ -130,11 +134,11 @@ button {
 }
 
 .navbar-logo::after{
-	content: ''; 
+	content: '';
     position: absolute;
 	top:0; /* Абсолютное позиционирование */
     left: 150px; /*bottom: -20px; /* Положение треугольника */
-    border: 22px solid transparent;	
+    border: 22px solid transparent;
 	border-left: 15px solid #ffdb4d;
 }
 
