--- a/css/devices.css
+++ b/css/devices.css
@@ -29,17 +29,16 @@ article {
     text-align: left;
     margin: 0 0 0.5em 0;
     transition: all 0.5s ease;
-    
 }
 
 .arrows .btn {
     display: inline-block;
+    position: fixed;
+    float: right;
     margin: 0.2em;
-/*    bottom: -2em;*/
-    margin-top: -5em;
-/*    margin-right: -3em;*/
+    top: 1em;
+    right: 2em;
 }
-
 
 body.small p.arrows {
     margin-right: -0.8em;
@@ -526,8 +525,8 @@ header.amber .btn span span {
     transition-duration: 0.5s;
     transition-timing-function: swing;
     background-color: white;
-/*    width: 100%;
-    height: 100%;*/
+    width: 100%;
+    height: 100%;
     position: relative;
     /*padding: 100px 40px;*/
 }
@@ -563,7 +562,8 @@ header.amber .btn span span {
     transition-timing-function: swing;
     width: 3em;
     height: 3em;
-    background-color: #ffdb4d; /*ffdb4d 14B9FF*/
+    background-color: #ffdb4d;
+    /*ffdb4d 14B9FF*/
     position: fixed;
     /*    top: 20px;
     left: 20px;*/
