--- a/css/regressionTable.css
+++ b/css/regressionTable.css
@@ -1,23 +1,29 @@
-table     { display: table }
-
-tr        { display: table-row }
-
-thead     { display: table-header-group }
-
-tbody     { display: table-row-group }
-
-tfoot     { display: table-footer-group }
-
-col       { display: table-column }
-
-colgroup  { display: table-column-group }
-
-td, th    { display: table-cell }
-
-caption   { display: table-caption }
-
-#caption {caption-side: top}
-
-#caption {caption-side: bottom}
-
-
+.divTable{
+    display: table;
+    width: 100%;
+  }
+  .divTableRow {
+    display: table-row;
+  }
+  .divTableHeading {
+    background-color: #EEE;
+    display: table-header-group;
+  }
+  .divTableCell, .divTableHead {
+    border: 1px solid #999999;
+    display: table-cell;
+    padding: 3px 10px;
+  }
+  .divTableHeading {
+    background-color: #EEE;
+    display: table-header-group;
+    font-weight: bold;
+  }
+  .divTableFoot {
+    background-color: #EEE;
+    display: table-footer-group;
+    font-weight: bold;
+  }
+  .divTableBody {
+    display: table-row-group;
+  }
